--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: 'week0'
+name: 'week1'
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Triggers the workflow on push or pull request events but only for the  week1 branch
   push:
-    branches: [ main, week0 ]
+    branches: [ week1 ]
   pull_request:
-    branches: [ main, week0 ]
+    branches: [ week1 ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Test Armstrong
+        working-directory: assignment
         run: ruby armstrong_test.rb
 
 
