--- a/.github/workflows/week1.yml
+++ b/.github/workflows/week1.yml
@@ -5,10 +5,9 @@ name: 'week1'
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the  week1 branch
-  push:
-    branches: [ week1 ]
   pull_request:
-    branches: [ week1 ]
+    branches:
+      - 'week1_*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
