--- a/week1/Gemfile
+++ b/week1/Gemfile
@@ -1,3 +1,13 @@
-source 'https://rubygems.org'
+GEM
 
-gem 'minitest'
+remote: https://rubygems.org/
+specs: minitest (5.15.0)
+
+PLATFORMS
+ruby
+
+DPENDENCIES
+minitest
+
+BUNDLED WITH
+2.3.6
