--- a/week3/about_me_app/Gemfile
+++ b/week3/about_me_app/Gemfile
@@ -29,7 +29,7 @@ gem 'sass-rails', '>= 6'
 # Boostrap and Bootstrap Forms gem
 gem "bootstrap", "~> 5.0"
 gem "bootstrap_form", "~> 5.0"
-
+gem 'rack-mini-profiler', '~> 2.0'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
 
